--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/garrrettt/four-card-game/issues"
   },
-  "homepage": "https://github.com/garrrettt/four-card-game#readme"
+  "homepage": "https://github.com/garrrettt/four-card-game#readme",
+  "dependencies": {
+    "@types/prompt-sync": "^4.2.0",
+    "prompt-sync": "^4.2.0",
+    "uuidv4": "^6.2.13"
+  }
 }
